--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = { version = "*", features = [ "tokio-native-tls", "gzip", "json" ] }
-tokio = { version = "*", features = [ "full" ] }
-anyhow = "*"
-url = "*"
+reqwest = { version = "^0.11", features = [ "tokio-native-tls", "gzip", "json" ] }
+tokio = { version = "^1.31", features = [ "full" ] }
+anyhow = "^1"
+url = "^2"
 serde = "^1"
 serde_derive = "^1"
 serde_json = "^1"
